// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=amber 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(251,191,36,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(245,158,11,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=cyan 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(34,211,238,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(14,165,233,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=green 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(74,222,128,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(34,197,94,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=purple 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(168,85,247,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(217,70,239,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=sky 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(56,189,248,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(2,132,199,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=teal 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(45,212,191,0.30),transparent_55%),radial-gradient(at_75%_70%,rgba(20,184,166,0.20),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > poster-blur snapshot with mock URL 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none"><img src="https://shikimori.one/poster.jpg" alt="" aria-hidden="true" class="absolute inset-0 w-full h-full object-cover scale-110" style="filter: blur(40px) saturate(1.2); opacity: 0.4;">
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;
